# Pixels

./: AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
crates/otf-pixels/: Cargo.toml
crates/otf-pixels-codec-avif/: Cargo.toml
crates/otf-pixels-codec-avif/src/: av1.rs  boxes.rs  decoder.rs  lib.rs  meta.rs  props.rs
crates/otf-pixels-codec-avif/src/av1/: bits.rs  cdf.rs  coeff.rs  deblock.rs  direction.rs  frame.rs  obu.rs  palette.rs  plane.rs  predict.rs  quant_tables.rs  scan_tables.rs  seq.rs  still.rs  symbol.rs  tile.rs  transform.rs  transform_type.rs  tx_size.rs
crates/otf-pixels-codec-avif/tests/: reference.rs
crates/otf-pixels-codec-avif/tests/fixtures/: REFERENCE  blocks_deblock.avif  blocks_deblock.raw  blocks_lossless.avif  blocks_nofilter.avif  blocks_nofilter.raw  gradient_deblock.avif  gradient_deblock.raw  gradient_lossless.avif  gradient_lossless.raw  gradient_nofilter.avif  gradient_nofilter.raw  gradient_odd_deblock.avif  gradient_odd_deblock.raw  gradient_odd_lossless.avif  gradient_odd_lossless.raw  gradient_odd_nofilter.avif  gradient_odd_nofilter.raw  tiny_lossless.avif
crates/otf-pixels-codec-gif/: Cargo.toml
crates/otf-pixels-codec-gif/src/: decoder.rs  encoder.rs  format.rs  lib.rs  quantize.rs
crates/otf-pixels-codec-gif/tests/: interop_emit.rs  reference.rs
crates/otf-pixels-codec-gif/tests/fixtures/: REFERENCE
crates/otf-pixels-codec-jpeg/: Cargo.toml
crates/otf-pixels-codec-jpeg/src/: decoder.rs  encoder.rs  entropy.rs  fdct.rs  format.rs  huffman.rs  idct.rs  lib.rs  progressive.rs  tables.rs
crates/otf-pixels-codec-jpeg/tests/: fuzz.rs  interop_emit.rs  malformed.rs  reference.rs  roundtrip.rs
crates/otf-pixels-codec-jpeg/tests/fixtures/: REFERENCE  blocks420.raw  blocks420.s1.raw  blocks420.s2.raw  blocks420.s4.raw  gradient420.raw  gradient420.s1.raw  gradient420.s2.raw  gradient422.raw  gradient422.s1.raw  gradient422.s2.raw  gradient422.s4.raw  gradient444.raw  gradient444.s1.raw  gradient444.s2.raw  gradient444.s4.raw  gray.raw  gray.s1.raw  gray.s2.raw  gray.s4.raw  graynoise.raw  graynoise.s1.raw  graynoise.s2.raw  graynoise.s4.raw  noise444.raw  noise444.s1.raw  noise444.s2.raw  noise444.s4.raw  progressive.raw  progressive.s1.raw  progressive.s2.raw  progressive.s4.raw  progressive420.raw  progressive420.s1.raw  progressive420.s2.raw  progressive420.s4.raw  restart420.s4.raw  restart444.raw  restart444.s1.raw  restart444.s2.raw  (+3 more)
crates/otf-pixels-codec-png/: Cargo.toml
crates/otf-pixels-codec-png/src/: decoder.rs  deflate.rs  encoder.rs  format.rs  inflate.rs  lib.rs
crates/otf-pixels-codec-png/tests/: fuzz.rs  interop_emit.rs  pngsuite.rs  zlib_reference.rs
crates/otf-pixels-codec-png/tests/fixtures/pngsuite/: REFERENCE
crates/otf-pixels-codec-png/tests/fixtures/zlib/: MANIFEST  dynamic_text.zlib  fixed_small.zlib  high_entropy.zlib  level1_text.zlib  long_zero_run.zlib  overlapping_runs.zlib  stored_level0.zlib
crates/otf-pixels-codec-raw/: Cargo.toml
crates/otf-pixels-codec-raw/src/: lib.rs
crates/otf-pixels-codec-tiff/: Cargo.toml
crates/otf-pixels-codec-tiff/src/: decoder.rs  encoder.rs  ifd.rs  image.rs  lib.rs
crates/otf-pixels-codec-tiff/tests/: interop_emit.rs  reference.rs
crates/otf-pixels-codec-tiff/tests/fixtures/: REFERENCE  bilevel.tif  gray16.tif  gray_lzw.tif  gray_none.tif  palette.tif  rgb_bigendian.tif  rgb_deflate.tif  rgb_lzw.tif  rgb_none.tif  rgb_packbits.tif  tiled_deflate.tif  tiled_lzw.tif  tiled_none.tif
crates/otf-pixels-codec-webp/: Cargo.toml
crates/otf-pixels-codec-webp/src/: decoder.rs  encoder.rs  lib.rs
crates/otf-pixels-codec-webp/tests/: interop_emit.rs  reference.rs
crates/otf-pixels-codec-webp/tests/fixtures/: REFERENCE  alpha_lossless.raw  alpha_lossy.raw  blocks_alpha_lossless.raw  blocks_lossless.raw  blocks_lossy.raw  gradient_lossless.raw  gradient_lossy.raw  grey_lossless.raw
crates/otf-pixels-compress/: Cargo.toml
crates/otf-pixels-compress/src/: checksum.rs  deflate.rs  inflate.rs  lib.rs  lzw.rs
crates/otf-pixels-core/: Cargo.toml
crates/otf-pixels-core/src/: cache.rs  codec.rs  error.rs  eval.rs  geometry.rs  graph.rs  io.rs  lib.rs  op.rs  pixel.rs  plan.rs  pool.rs  schedule.rs  shrink.rs  source.rs  testing.rs  tile.rs
crates/otf-pixels-ops/: Cargo.toml
crates/otf-pixels-ops/src/: composite.rs  convolve.rs  filter.rs  geometry.rs  lib.rs  pointwise.rs  resample.rs  resize.rs  rotate.rs
crates/otf-pixels/benches/: ops.rs  scaling.rs  thumbnail.rs
crates/otf-pixels/src/: lib.rs
crates/otf-pixels/tests/: m1_exit_criteria.rs  m2_exit_criteria.rs  m3_exit_criteria.rs  m4_exit_criteria.rs  m5_exit_criteria.rs
docs/: ARCHITECTURE.md  ROADMAP.md  SPEC.md
docs/adr/: 0001-libvips-style-demand-driven-engine.md  0002-hybrid-pixel-typing.md  0003-negotiated-tile-shapes.md  0004-codec-ownership-split.md  0005-streaming-io-sync-core.md  0006-naming-and-crate-layout.md  0007-gpu-deferred-to-v2.md  0008-crossbeam-deque-for-work-stealing.md  0009-scheduler-inserted-materialization.md  0010-own-inflate-and-deflate.md  0011-autovectorization-and-fixed-point.md  0012-extract-compression-crate.md  0013-own-avif.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: avif_decode.rs  inflate.rs  jpeg_decode.rs  jpeg_roundtrip.rs  png_decode.rs  png_roundtrip.rs
scripts/: check-deflate-interop.sh  check-gif-interop.sh  check-jpeg-interop.sh  check-png-interop.sh  check-tiff-interop.sh  check-webp-interop.sh  generate-av1-cdf-tables.py  generate-av1-scan-tables.py  regenerate-avif-reference.py  regenerate-gif-reference.py  regenerate-jpeg-reference.py  regenerate-pngsuite-reference.py  regenerate-tiff-reference.py  regenerate-webp-reference.py
scripts/data/: av1-default-cdf-tables.txt  av1-scan-tables.txt
