[package]
name = "otf-pixels-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
otf-pixels-core = { path = "../crates/otf-pixels-core" }
otf-pixels-codec-png = { path = "../crates/otf-pixels-codec-png" }
otf-pixels-codec-jpeg = { path = "../crates/otf-pixels-codec-jpeg" }
otf-pixels-codec-avif = { path = "../crates/otf-pixels-codec-avif" }

[[bin]]
name = "png_decode"
path = "fuzz_targets/png_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "inflate"
path = "fuzz_targets/inflate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jpeg_decode"
path = "fuzz_targets/jpeg_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jpeg_roundtrip"
path = "fuzz_targets/jpeg_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "png_roundtrip"
path = "fuzz_targets/png_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "avif_decode"
path = "fuzz_targets/avif_decode.rs"
test = false
doc = false
bench = false

# The fuzz crate is deliberately outside the workspace: it needs nightly and
# pulls in libfuzzer, neither of which should burden an ordinary build.
[workspace]
members = ["."]
