[package]
name = "otf-pixels-compress"
description = "Compression and checksum primitives for otf-pixels codecs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

# Deliberately no dependency on otf-pixels-core: this crate knows about bit
# streams and byte buffers, not about images (ADR-0012).
[dependencies]

[lints]
workspace = true
