[package]
name = "otf-pixels"
description = "A streaming, demand-driven image processing engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dependencies]
otf-pixels-core.workspace = true
otf-pixels-ops.workspace = true
otf-pixels-codec-raw = { workspace = true, optional = true }
otf-pixels-codec-png = { workspace = true, optional = true }
otf-pixels-codec-gif = { workspace = true, optional = true }
otf-pixels-codec-jpeg = { workspace = true, optional = true }
otf-pixels-codec-tiff = { workspace = true, optional = true }

[features]
default = ["raw", "png", "gif", "jpeg", "jpeg-progressive", "tiff"]
# Raw pixel codec. Kept behind a feature for symmetry with the other codecs
# (ARCHITECTURE §Layer 2: "each format is a plugin behind a cargo feature").
raw = ["dep:otf-pixels-codec-raw"]
# PNG codec, implemented from scratch including DEFLATE (ADR-0010).
png = ["dep:otf-pixels-codec-png"]
# GIF codec, including LZW (ADR-0012).
gif = ["dep:otf-pixels-codec-gif"]
# Baseline JPEG codec, including M/8 scaled decode. Progressive JPEG is a
# wrapped codec and is not part of this feature.
jpeg = ["dep:otf-pixels-codec-jpeg"]
# Progressive JPEG, which is wrapped rather than owned (ADR-0004) and is the
# only external dependency in the default build. Drop it with
# `default-features = false` plus the features you want, and progressive files
# then report `Unsupported`.
jpeg-progressive = ["jpeg", "otf-pixels-codec-jpeg?/progressive"]
# TIFF codec. The only v1 format with region random access.
tiff = ["dep:otf-pixels-codec-tiff"]

[dev-dependencies]
# Benchmark comparisons only (ROADMAP M4 exit criterion). These never enter the
# published dependency graph, so the shipped library stays dependency-free
# apart from crossbeam-deque (ADR-0008).
image = { version = "0.25", default-features = false }
fast_image_resize = "6"

[[bench]]
name = "ops"
harness = false

# The M5 exit criterion: giant tiled TIFF to thumbnail, against libvips.
[[bench]]
name = "thumbnail"
harness = false

# The scaling benchmark is a plain binary, not a libtest harness: it measures
# how fixed work redistributes across threads rather than timing a micro-op.
[[bench]]
name = "scaling"
harness = false

[lints]
workspace = true
